--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1282,8 +1282,9 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   series={NeurIPS},
   presort={01},
   year={2022},
-  note={Accepted},
-  rmdnote={alert=Selected as Oral (7% of papers);full=https://arxiv.org/abs/2210.06077;code=https://github.com/andrew-cullen/DoubleBubble;vid=https://recorder-v3.slideslive.com/#/share?share=74042&s=8b0cbca4-1e05-445d-a46b-c33fae65a4f8}
+  pages={19099--19112},
+  volume={35},
+  rmdnote={alert=Selected as Oral (7% of papers);pub=https://proceedings.neurips.cc/paper_files/paper/2022/hash/79a0c8e7ae8e403e39341ea6b0ba4c21-Abstract-Conference.html;full=https://arxiv.org/abs/2210.06077;code=https://github.com/andrew-cullen/DoubleBubble;vid=https://recorder-v3.slideslive.com/#/share?share=74042&s=8b0cbca4-1e05-445d-a46b-c33fae65a4f8}
 }
 
 @inproceedings{rubinstein2022unlabelled,
@@ -1291,10 +1292,10 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   author={J. Hyam Rubinstein and Benjamin I. P. Rubinstein},
   booktitle={Advances in Neural Information Processing Systems},
   series={NeurIPS},
-  note={Accepted},
   presort={02},
   year={2022},
-  rmdnote={full=https://arxiv.org/abs/2210.05455;vid=https://recorder-v3.slideslive.com/#/share?share=76156&s=b89c0ea6-8bc0-4472-aa51-c1632814b669}
+  pages={13078--13090},
+  rmdnote={pub=https://proceedings.neurips.cc/paper_files/paper/2022/hash/54d6a55225cebbdc16fbb0e45c5bdf2b-Abstract-Conference.html;full=https://arxiv.org/abs/2210.05455;vid=https://recorder-v3.slideslive.com/#/share?share=76156&s=b89c0ea6-8bc0-4472-aa51-c1632814b669}
 }
 
 @inproceedings{jin2022are,
