--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1596,3 +1596,13 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   presort={01},
   rmdnote={pdf=https://arxiv.org/abs/2309.11005}
 }
+
+@misc{jin2024elephants,
+  title={Elephants Do Not Forget: Differential Privacy with State Continuity for Privacy Budget },
+  author={Jin,Jiankai and Chuengsatiansup, Chitchanok and Murray, Toby and Rubinstein, Benjamin I. P. and Yarom, Yuval and Ohrimenko, Olga},
+  note={arXiv:2401.17628 [cs.CR]},
+  year={2024},
+  month={Jan},
+  presort={02},
+  rmdnote={pdf=https://arxiv.org/abs/2401.17628}
+}
