--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1597,12 +1597,22 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   rmdnote={pdf=https://arxiv.org/abs/2309.11005}
 }
 
+@inproceedings{wang2024backdoor,
+  title={Backdoor Attacks on Multilingual Machine Translation},
+  author={Wang, Jun and Xu, Qiongkai and He, Xuanli and Rubinstein, Benjamin I. P. and Cohn, Trevor},
+  booktitle={Proceedings of the 2024 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies},
+  series={NAACL},
+  note={Accepted},
+  year={2024},
+  presort={02}
+}
+
 @misc{jin2024elephants,
   title={Elephants Do Not Forget: Differential Privacy with State Continuity for Privacy Budget },
   author={Jin,Jiankai and Chuengsatiansup, Chitchanok and Murray, Toby and Rubinstein, Benjamin I. P. and Yarom, Yuval and Ohrimenko, Olga},
   note={arXiv:2401.17628 [cs.CR]},
   year={2024},
   month={Jan},
-  presort={02},
+  presort={03},
   rmdnote={pdf=https://arxiv.org/abs/2401.17628}
 }
