--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1604,7 +1604,8 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   series={NAACL},
   note={Accepted},
   year={2024},
-  presort={02}
+  presort={02},
+  rmdnote={pdf=https://arxiv.org/abs/2404.02393}
 }
 
 @misc{jin2024elephants,
