--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1597,6 +1597,15 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   rmdnote={pdf=https://arxiv.org/abs/2309.11005}
 }
 
+@article{he2024seep,
+  title={{SEEP}: Training Dynamics Grounds Latent Representation Search for Mitigating Backdoor Poisoning Attacks},
+  author={He, Xuanli and Xu, Qiongkai and Wang, Jun and Rubinstein, Benjamin I. P. and Cohn, Trevor},
+  journal={Transactions of the Association for Computational Linguistics (TACL)},
+  year={2024},
+  note={Accepted},
+  presort={02}
+}
+
 @inproceedings{wang2024backdoor,
   title={Backdoor Attacks on Multilingual Machine Translation},
   author={Wang, Jun and Xu, Qiongkai and He, Xuanli and Rubinstein, Benjamin I. P. and Cohn, Trevor},
@@ -1604,8 +1613,19 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   series={NAACL},
   note={Accepted},
   year={2024},
-  presort={02},
+  presort={03},
   rmdnote={pdf=https://arxiv.org/abs/2404.02393}
+}
+
+@inproceedings{ortiz2024mitigating,
+  title={Mitigating Challenges of the Space Environment for Onboard Artificial Intelligence: Design Overview of the Imaging Payload on {SpIRIT}},
+  year={2024},
+  author={Ortiz del Castillo, Miguel and Morgan, Jonathan and McRobbie, Jack and Therakam, Clint and Joukhadar, Zaher and Mearns, Robert and Barraclough, Simon and Sinnott, Richard and Woods, Andrew and Bayliss, Chris and Ehinger, Kris and Rubinstein, Ben and Bailey, James and Chapman, Airlie and Trenti, Michele},
+  booktitle={3rd Workshop on AI for Space},
+  series={AI4Space},
+  note={Accepted; co-located with CVPR2024},
+  presort={04},
+  rmdnote={pdf=https://arxiv.org/abs/2404.08399}
 }
 
 @misc{jin2024elephants,
@@ -1614,6 +1634,6 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={arXiv:2401.17628 [cs.CR]},
   year={2024},
   month={Jan},
-  presort={03},
+  presort={05},
   rmdnote={pdf=https://arxiv.org/abs/2401.17628}
 }
