--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1628,12 +1628,24 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   rmdnote={pdf=https://arxiv.org/abs/2404.08399}
 }
 
+https://arxiv.org/abs/2404.19597
+
+@misc{he2024transferring,
+  title={Transferring Troubles: Cross-Lingual Transferability of Backdoor Attacks in LLMs with Instruction Tuning},
+  author={He, Xuanli and Wang, Jun and Xu, Qiongkai and Minervini, Pasquale and Stenetorp, Pontus and Rubinstein, Benjamin I. P. and Cohn, Trevor},
+  note={arXiv:2404.19597 [cs.CL]},
+  year={2024},
+  month={May},
+  presort={05},
+  rmdnote={pdf=https://arxiv.org/abs/2404.19597}
+}
+
 @misc{jin2024elephants,
   title={Elephants Do Not Forget: Differential Privacy with State Continuity for Privacy Budget },
   author={Jin,Jiankai and Chuengsatiansup, Chitchanok and Murray, Toby and Rubinstein, Benjamin I. P. and Yarom, Yuval and Ohrimenko, Olga},
   note={arXiv:2401.17628 [cs.CR]},
   year={2024},
   month={Jan},
-  presort={05},
+  presort={06},
   rmdnote={pdf=https://arxiv.org/abs/2401.17628}
 }
