--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1566,16 +1566,6 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   rmdnote={pub=https://drive.google.com/file/d/13MPWLMARWIKMJqeL2mazfQvOK6-QcmEG/view?usp=sharing}
 }
 
-@misc{cullen2023exploiting,
-  title={Exploiting Certified Defences to Attack Randomised Smoothing},
-  author={Cullen, Andrew C. and Montague, Paul and Liu, Shijie and Erfani, Sarah M. and Rubinstein, Benjamin I. P.},
-  note={arXiv:2302.04379 [cs.LG]},
-  year={2023},
-  month={February},
-  presort={15},
-  rmdnote={pdf=https://arxiv.org/abs/2302.04379}
-}
-
 @misc{jin2022getting,
   title={Getting a-Round Guarantees: Floating-Point Attacks on Certified
   Robustness},
@@ -1583,8 +1573,19 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={arXiv:2205.10159 [cs.CR]},
   year={2023},
   month={Feb},
-  presort={16},
+  presort={15},
   rmdnote={pdf=https://arxiv.org/abs/2205.10159}
+}
+
+@inproceedings{cullen2024et,
+  title={Et Tu Certifications: Robustness Certificates Yield Better Adversarial Examples},
+  author={Cullen, Andrew C. and Montague, Paul and Liu, Shijie and Erfani, Sarah M. and Rubinstein, Benjamin I. P.},
+  year={2024},
+  booktitle={Proceedings of the 41st International Conference on Machine Learning},
+  series={ICML},
+  note={Accepted},
+  presort={01},
+  rmdnote={pdf=https://arxiv.org/abs/2302.04379}
 }
 
 @inproceedings{cullen2023its,
@@ -1593,7 +1594,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   year={2024},
   booktitle={2024 IEEE Symposium on Security and Privacy (SP)},
   note={Accepted},
-  presort={01},
+  presort={02},
   rmdnote={pdf=https://arxiv.org/abs/2309.11005}
 }
 
@@ -1603,7 +1604,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   journal={Transactions of the Association for Computational Linguistics (TACL)},
   year={2024},
   note={Accepted},
-  presort={02}
+  presort={03}
 }
 
 @inproceedings{wang2024backdoor,
@@ -1613,7 +1614,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   series={NAACL},
   note={Accepted},
   year={2024},
-  presort={03},
+  presort={04},
   rmdnote={pdf=https://arxiv.org/abs/2404.02393}
 }
 
@@ -1624,11 +1625,9 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   booktitle={3rd Workshop on AI for Space},
   series={AI4Space},
   note={Accepted; co-located with CVPR2024},
-  presort={04},
+  presort={05},
   rmdnote={pdf=https://arxiv.org/abs/2404.08399}
 }
-
-https://arxiv.org/abs/2404.19597
 
 @misc{he2024transferring,
   title={Transferring Troubles: Cross-Lingual Transferability of Backdoor Attacks in LLMs with Instruction Tuning},
@@ -1636,7 +1635,7 @@ https://arxiv.org/abs/2404.19597
   note={arXiv:2404.19597 [cs.CL]},
   year={2024},
   month={May},
-  presort={05},
+  presort={06},
   rmdnote={pdf=https://arxiv.org/abs/2404.19597}
 }
 
@@ -1646,6 +1645,6 @@ https://arxiv.org/abs/2404.19597
   note={arXiv:2401.17628 [cs.CR]},
   year={2024},
   month={Jan},
-  presort={06},
+  presort={07},
   rmdnote={pdf=https://arxiv.org/abs/2401.17628}
 }
