emnlp published and vid

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1424,12 +1424,12 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
 @inproceedings{he2023mitigating,
   title={Mitigating Backdoor Poisoning Attacks through the Lens of Spurious Correlation},
   author={He, Xuanli and Xu, Qiongkai and Wang, Jun and Rubinstein, Benjamin I. P. and Cohn, Trevor},
-  booktitle={The 2023 Conference on Empirical Methods in Natural Language Processing},
+  booktitle={Proceedings of the 2023 Conference on Empirical Methods in Natural Language Processing},
   series={EMNLP},
-  note={Accepted},
+  pages={953--967},
   year={2023},
   presort={02},
-  rmdnote={full=https://arxiv.org/abs/2305.11596}
+  rmdnote={pub=https://aclanthology.org/2023.emnlp-main.60.pdf;full=https://arxiv.org/abs/2305.11596;vid=https://aclanthology.org/2023.emnlp-main.60.mp4}
 }
 
 @inproceedings{liu2023enhancing,
