--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1604,7 +1604,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   journal={Transactions of the Association for Computational Linguistics (TACL)},
   year={2024},
   note={Accepted},
-  presort={03}
+  presort={04}
 }
 
 @inproceedings{wang2024backdoor,
@@ -1614,8 +1614,8 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   series={NAACL},
   note={Accepted},
   year={2024},
-  presort={04},
-  rmdnote={pdf=https://arxiv.org/abs/2404.02393}
+  presort={03},
+  rmdnote={alert=Selected as Oral (15% of accepted papers);pdf=https://arxiv.org/abs/2404.02393}
 }
 
 @inproceedings{ortiz2024mitigating,
