--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1639,12 +1639,23 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   rmdnote={pdf=https://arxiv.org/abs/2404.19597}
 }
 
+@misc{rekavandi24rsreg,
+  title={{RS-Reg}: {P}robabilistic and Robust Certified Regression Through Randomized Smoothing},
+  author={Rekavandi, Aref Miri and Ohrimenko, Olga and Rubinstein, Benjamin I. P.},
+  note={arXiv:2405.08892 [cs.LG]},
+  year={2024},
+  month={May},
+  presort={07},
+  rmdnote={pdf=https://arxiv.org/abs/2405.08892}
+}
+
 @misc{jin2024elephants,
   title={Elephants Do Not Forget: Differential Privacy with State Continuity for Privacy Budget },
   author={Jin,Jiankai and Chuengsatiansup, Chitchanok and Murray, Toby and Rubinstein, Benjamin I. P. and Yarom, Yuval and Ohrimenko, Olga},
   note={arXiv:2401.17628 [cs.CR]},
   year={2024},
   month={Jan},
-  presort={07},
+  presort={08},
   rmdnote={pdf=https://arxiv.org/abs/2401.17628}
 }
+
