--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1604,7 +1604,8 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   journal={Transactions of the Association for Computational Linguistics (TACL)},
   year={2024},
   note={Accepted},
-  presort={04}
+  presort={04},
+  rmdnote={pdf=https://arxiv.org/abs/2405.11575}
 }
 
 @inproceedings{wang2024backdoor,
