elephant to ccs

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1588,24 +1588,26 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   rmdnote={pdf=https://arxiv.org/abs/2302.04379}
 }
 
+@inproceedings{jin2024elephants,
+  title={Elephants Do Not Forget: Differential Privacy with State Continuity for Privacy Budget },
+  author={Jin,Jiankai and Chuengsatiansup, Chitchanok and Murray, Toby and Rubinstein, Benjamin I. P. and Yarom, Yuval and Ohrimenko, Olga},
+  year={2024},
+  booktitle={Proceedings of the 2024 ACM SIGSAC Conference on Computer and Communications Security},
+  series={CCS},
+  note={Accepted},
+  presort={02},
+  rmdnote={pdf=https://arxiv.org/abs/2401.17628}
+}
+
 @inproceedings{cullen2023its,
   title={It's Simplex! Disaggregating Measures to Improve Certified Robustness},
   author={Cullen, Andrew C. and Montague, Paul and Liu, Shijie and Erfani, Sarah and Rubinstein, Benjamin I. P.},
   year={2024},
-  booktitle={2024 IEEE Symposium on Security and Privacy (SP)},
+  booktitle={2024 IEEE Symposium on Security and Privacy},
+  series={SP},
   note={Accepted},
-  presort={02},
+  presort={03},
   rmdnote={pdf=https://arxiv.org/abs/2309.11005}
-}
-
-@article{he2024seep,
-  title={{SEEP}: Training Dynamics Grounds Latent Representation Search for Mitigating Backdoor Poisoning Attacks},
-  author={He, Xuanli and Xu, Qiongkai and Wang, Jun and Rubinstein, Benjamin I. P. and Cohn, Trevor},
-  journal={Transactions of the Association for Computational Linguistics (TACL)},
-  year={2024},
-  note={Accepted},
-  presort={04},
-  rmdnote={pdf=https://arxiv.org/abs/2405.11575}
 }
 
 @inproceedings{wang2024backdoor,
@@ -1615,8 +1617,18 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   series={NAACL},
   note={Accepted},
   year={2024},
-  presort={03},
+  presort={04},
   rmdnote={alert=Selected as Oral (15% of accepted papers);pdf=https://arxiv.org/abs/2404.02393}
+}
+
+@article{he2024seep,
+  title={{SEEP}: Training Dynamics Grounds Latent Representation Search for Mitigating Backdoor Poisoning Attacks},
+  author={He, Xuanli and Xu, Qiongkai and Wang, Jun and Rubinstein, Benjamin I. P. and Cohn, Trevor},
+  journal={Transactions of the Association for Computational Linguistics (TACL)},
+  year={2024},
+  note={Accepted},
+  presort={05},
+  rmdnote={pdf=https://arxiv.org/abs/2405.11575}
 }
 
 @inproceedings{ortiz2024mitigating,
@@ -1626,7 +1638,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   booktitle={3rd Workshop on AI for Space},
   series={AI4Space},
   note={Accepted; co-located with CVPR2024},
-  presort={05},
+  presort={06},
   rmdnote={pdf=https://arxiv.org/abs/2404.08399}
 }
 
@@ -1636,7 +1648,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={arXiv:2404.19597 [cs.CL]},
   year={2024},
   month={May},
-  presort={06},
+  presort={07},
   rmdnote={pdf=https://arxiv.org/abs/2404.19597}
 }
 
@@ -1646,17 +1658,6 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={arXiv:2405.08892 [cs.LG]},
   year={2024},
   month={May},
-  presort={07},
+  presort={08},
   rmdnote={pdf=https://arxiv.org/abs/2405.08892}
 }
-
-@misc{jin2024elephants,
-  title={Elephants Do Not Forget: Differential Privacy with State Continuity for Privacy Budget },
-  author={Jin,Jiankai and Chuengsatiansup, Chitchanok and Murray, Toby and Rubinstein, Benjamin I. P. and Yarom, Yuval and Ohrimenko, Olga},
-  note={arXiv:2401.17628 [cs.CR]},
-  year={2024},
-  month={Jan},
-  presort={08},
-  rmdnote={pdf=https://arxiv.org/abs/2401.17628}
-}
-
