--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1642,13 +1642,23 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   rmdnote={pdf=https://arxiv.org/abs/2404.08399}
 }
 
+@misc{marchant2024adaptive,
+  title={Adaptive Data Analysis for Growing Data},
+  author={Marchant, Neil G. and Rubinstein, Benjamin I. P.},
+  note={arXiv:2405.13375 [cs.CL]},
+  year={2024},
+  month={May},
+  presort={07},
+  rmdnote={pdf=https://arxiv.org/abs/2405.13375}
+}
+
 @misc{he2024transferring,
   title={Transferring Troubles: Cross-Lingual Transferability of Backdoor Attacks in LLMs with Instruction Tuning},
   author={He, Xuanli and Wang, Jun and Xu, Qiongkai and Minervini, Pasquale and Stenetorp, Pontus and Rubinstein, Benjamin I. P. and Cohn, Trevor},
   note={arXiv:2404.19597 [cs.CL]},
   year={2024},
   month={May},
-  presort={07},
+  presort={08},
   rmdnote={pdf=https://arxiv.org/abs/2404.19597}
 }
 
@@ -1658,6 +1668,6 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={arXiv:2405.08892 [cs.LG]},
   year={2024},
   month={May},
-  presort={08},
+  presort={09},
   rmdnote={pdf=https://arxiv.org/abs/2405.08892}
 }
