space best paper

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1639,7 +1639,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   series={AI4Space},
   note={Accepted; co-located with CVPR2024},
   presort={06},
-  rmdnote={pdf=https://arxiv.org/abs/2404.08399}
+  rmdnote={alert=Best Paper Award (Honourable Mention);pdf=https://arxiv.org/abs/2404.08399}
 }
 
 @misc{marchant2024adaptive,
