--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1671,3 +1671,13 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   presort={09},
   rmdnote={pdf=https://arxiv.org/abs/2405.08892}
 }
+
+@misc{huang24certed,
+  title={{CERT-ED}: Certifiably Robust Text Classification for Edit Distance},
+  author={Huang, Zhuoqun and Marchant, Neil G. and Ohrimenko, Olga and Rubinstein, Benjamin I. P.},
+  note={arXiv:2408.00728 [cs.CL]},
+  year={2024},
+  month={August},
+  presort={10},
+  rmdnote={pdf=https://arxiv.org/abs/2408.00728}
+}
