AISec FP FR attacks

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1566,17 +1566,6 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   rmdnote={pub=https://drive.google.com/file/d/13MPWLMARWIKMJqeL2mazfQvOK6-QcmEG/view?usp=sharing}
 }
 
-@misc{jin2022getting,
-  title={Getting a-Round Guarantees: Floating-Point Attacks on Certified
-  Robustness},
-  author={Jiankai Jin and Olga Ohrimenko and Benjamin I. P. Rubinstein},
-  note={arXiv:2205.10159 [cs.CR]},
-  year={2023},
-  month={Feb},
-  presort={15},
-  rmdnote={pdf=https://arxiv.org/abs/2205.10159}
-}
-
 @inproceedings{cullen2024et,
   title={Et Tu Certifications: Robustness Certificates Yield Better Adversarial Examples},
   author={Cullen, Andrew C. and Montague, Paul and Liu, Shijie and Erfani, Sarah M. and Rubinstein, Benjamin I. P.},
@@ -1585,7 +1574,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   series={ICML},
   note={Accepted},
   presort={01},
-  rmdnote={pdf=https://arxiv.org/abs/2302.04379}
+  rmdnote={pdf=https://arxiv.org/abs/2302.04379;vid=https://www.youtube.com/watch?v=Rm3fwkGzzy0}
 }
 
 @inproceedings{jin2024elephants,
@@ -1631,6 +1620,18 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   rmdnote={pdf=https://arxiv.org/abs/2405.11575}
 }
 
+@inproceedings{jin2024getting,
+  title={Getting a-Round Guarantees: Floating-Point Attacks on Certified
+  Robustness},
+  author={Jiankai Jin and Olga Ohrimenko and Benjamin I. P. Rubinstein},
+  year={2024},
+  booktitle={Proceedings of the 17th ACM Workshop on Security and Artificial Intelligence},
+  series={AISec},
+  note={Accepted; co-located with CCS2024},
+  presort={06},
+  rmdnote={pdf=https://arxiv.org/abs/2205.10159}
+}
+
 @inproceedings{ortiz2024mitigating,
   title={Mitigating Challenges of the Space Environment for Onboard Artificial Intelligence: Design Overview of the Imaging Payload on {SpIRIT}},
   year={2024},
@@ -1638,7 +1639,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   booktitle={3rd Workshop on AI for Space},
   series={AI4Space},
   note={Accepted; co-located with CVPR2024},
-  presort={06},
+  presort={07},
   rmdnote={alert=Best Paper Award (Honourable Mention);pdf=https://arxiv.org/abs/2404.08399}
 }
 
@@ -1648,7 +1649,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={arXiv:2405.13375 [cs.CL]},
   year={2024},
   month={May},
-  presort={07},
+  presort={08},
   rmdnote={pdf=https://arxiv.org/abs/2405.13375}
 }
 
@@ -1658,7 +1659,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={arXiv:2404.19597 [cs.CL]},
   year={2024},
   month={May},
-  presort={08},
+  presort={09},
   rmdnote={pdf=https://arxiv.org/abs/2404.19597}
 }
 
@@ -1668,7 +1669,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={arXiv:2405.08892 [cs.LG]},
   year={2024},
   month={May},
-  presort={09},
+  presort={10},
   rmdnote={pdf=https://arxiv.org/abs/2405.08892}
 }
 
@@ -1678,6 +1679,6 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={arXiv:2408.00728 [cs.CL]},
   year={2024},
   month={August},
-  presort={10},
+  presort={11},
   rmdnote={pdf=https://arxiv.org/abs/2408.00728}
 }
