--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1643,13 +1643,23 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   rmdnote={alert=Best Paper Award (Honourable Mention);pdf=https://arxiv.org/abs/2404.08399}
 }
 
+@inproceedings{oetomo24warm,
+  title={Warm-Starting Contextual Bandits under Latent Reward Scaling},
+  year={2024},
+  author={Oetomo, Bastian and Perera, R. Malinga and Borovica-Gajic, Renata and Rubinstein, Benjamin I. P.},
+  booktitle={2024 IEEE 16th International Conference on Data Mining},
+  series={ICDM},
+  note={Accepted},
+  presort={08}
+}
+
 @misc{marchant2024adaptive,
   title={Adaptive Data Analysis for Growing Data},
   author={Marchant, Neil G. and Rubinstein, Benjamin I. P.},
   note={arXiv:2405.13375 [cs.CL]},
   year={2024},
   month={May},
-  presort={08},
+  presort={09},
   rmdnote={pdf=https://arxiv.org/abs/2405.13375}
 }
 
@@ -1659,7 +1669,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={arXiv:2404.19597 [cs.CL]},
   year={2024},
   month={May},
-  presort={09},
+  presort={10},
   rmdnote={pdf=https://arxiv.org/abs/2404.19597}
 }
 
@@ -1669,7 +1679,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={arXiv:2405.08892 [cs.LG]},
   year={2024},
   month={May},
-  presort={10},
+  presort={11},
   rmdnote={pdf=https://arxiv.org/abs/2405.08892}
 }
 
@@ -1679,6 +1689,6 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={arXiv:2408.00728 [cs.CL]},
   year={2024},
   month={August},
-  presort={11},
+  presort={12},
   rmdnote={pdf=https://arxiv.org/abs/2408.00728}
 }
