EMNLP findings accept

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1620,6 +1620,16 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   rmdnote={pdf=https://arxiv.org/abs/2405.11575}
 }
 
+@inproceedings{huang24certed,
+  title={{CERT-ED}: Certifiably Robust Text Classification for Edit Distance},
+  author={Huang, Zhuoqun and Marchant, Neil G. and Ohrimenko, Olga and Rubinstein, Benjamin I. P.},
+  booktitle={Findings of the Association for Computational Linguistics: EMNLP 2024},
+  year={2024},
+  note={Accepted},
+  presort={06},
+  rmdnote={pdf=https://arxiv.org/abs/2408.00728}
+}
+
 @inproceedings{jin2024getting,
   title={Getting a-Round Guarantees: Floating-Point Attacks on Certified
   Robustness},
@@ -1628,7 +1638,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   booktitle={Proceedings of the 17th ACM Workshop on Security and Artificial Intelligence},
   series={AISec},
   note={Accepted; co-located with CCS2024},
-  presort={06},
+  presort={07},
   rmdnote={pdf=https://arxiv.org/abs/2205.10159}
 }
 
@@ -1639,7 +1649,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   booktitle={3rd Workshop on AI for Space},
   series={AI4Space},
   note={Accepted; co-located with CVPR2024},
-  presort={07},
+  presort={08},
   rmdnote={alert=Best Paper Award (Honourable Mention);pdf=https://arxiv.org/abs/2404.08399}
 }
 
@@ -1650,7 +1660,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   booktitle={2024 IEEE 16th International Conference on Data Mining},
   series={ICDM},
   note={Accepted},
-  presort={08}
+  presort={09}
 }
 
 @misc{marchant2024adaptive,
@@ -1659,7 +1669,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={arXiv:2405.13375 [cs.CL]},
   year={2024},
   month={May},
-  presort={09},
+  presort={10},
   rmdnote={pdf=https://arxiv.org/abs/2405.13375}
 }
 
@@ -1669,7 +1679,7 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={arXiv:2404.19597 [cs.CL]},
   year={2024},
   month={May},
-  presort={10},
+  presort={11},
   rmdnote={pdf=https://arxiv.org/abs/2404.19597}
 }
 
@@ -1679,16 +1689,6 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   note={arXiv:2405.08892 [cs.LG]},
   year={2024},
   month={May},
-  presort={11},
-  rmdnote={pdf=https://arxiv.org/abs/2405.08892}
-}
-
-@misc{huang24certed,
-  title={{CERT-ED}: Certifiably Robust Text Classification for Edit Distance},
-  author={Huang, Zhuoqun and Marchant, Neil G. and Ohrimenko, Olga and Rubinstein, Benjamin I. P.},
-  note={arXiv:2408.00728 [cs.CL]},
-  year={2024},
-  month={August},
   presort={12},
-  rmdnote={pdf=https://arxiv.org/abs/2408.00728}
+  rmdnote={pdf=https://arxiv.org/abs/2405.08892}
 }
