--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1615,7 +1615,8 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   author={He, Xuanli and Xu, Qiongkai and Wang, Jun and Rubinstein, Benjamin I. P. and Cohn, Trevor},
   journal={Transactions of the Association for Computational Linguistics (TACL)},
   year={2024},
-  note={Accepted},
+  pages={996--1010},
+  volume={12},
   presort={05},
   rmdnote={pdf=https://arxiv.org/abs/2405.11575}
 }
