--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1643,15 +1643,14 @@ rmdnote = {pub=https://ieeexplore.ieee.org/document/9610045}
   rmdnote={pdf=https://arxiv.org/abs/2205.10159}
 }
 
-@inproceedings{ortiz2024mitigating,
-  title={Mitigating Challenges of the Space Environment for Onboard Artificial Intelligence: Design Overview of the Imaging Payload on {SpIRIT}},
+@inproceedings{joukhadar2024designing,
+  author={Joukhadar, Zaher and Morgan, Jonathan and Bayliss, Christopher and Ortiz del Castillo, Miguel and McRobbie, Jack and Mearns, Robert and Ehinger, Krista A. and Rubinstein, Benjamin I. P. and Sinnott, Richard and Trenti, Michele and Bailey, James},
+  title={Designing an Adaptive {AI} System for Operation on Board a Nano-satellite},
   year={2024},
-  author={Ortiz del Castillo, Miguel and Morgan, Jonathan and McRobbie, Jack and Therakam, Clint and Joukhadar, Zaher and Mearns, Robert and Barraclough, Simon and Sinnott, Richard and Woods, Andrew and Bayliss, Chris and Ehinger, Kris and Rubinstein, Ben and Bailey, James and Chapman, Airlie and Trenti, Michele},
-  booktitle={3rd Workshop on AI for Space},
-  series={AI4Space},
-  note={Accepted; co-located with CVPR2024},
-  presort={08},
-  rmdnote={alert=Best Paper Award (Honourable Mention);pdf=https://arxiv.org/abs/2404.08399}
+  note={Accepted},
+  booktitle={37th Australasian Joint Conference on Artificial Intelligence},
+  series={AJCAI},
+  presort={08}
 }
 
 @inproceedings{oetomo24warm,
